--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -18,6 +18,8 @@
         <import type="com.merlin.view.Clicker"/>
         <import type="com.merlin.util.Time"/>
         <import type="com.merlin.client.R"/>
+        <import type="com.merlin.util.DefaultThumbs"/>
+        <import type="com.merlin.bean.LocalFile"/>
     </data>
     <RelativeLayout
         binding:enableClick="@{Clicker.multiClick(meta,true)}"
@@ -29,8 +31,8 @@
         <ImageView
             android:id="@+id/itemListFile_icon"
             android:layout_alignParentLeft="true"
-            android:src="@{meta.imageUrl}"
-            android:padding="1dp"
+            android:src="@{meta.imageUrl??DefaultThumbs.getDefaultThumbByMeta(meta)}"
+            android:padding="5dp"
             android:layout_margin="1dp"
             android:layout_width="@dimen/listItemNormal"
             android:layout_height="@dimen/listItemNormal"/>
@@ -45,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:textSize="@dimen/textTitle"
                 android:singleLine="true"
-                android:text="@{meta.title??meta.name}"
+                android:text="@{meta instanceof LocalFile?(meta.getName(true)??meta.title):(meta.title??meta.getName(true))}"
                 android:textColor="@color/textTitle"
                 android:layout_height="wrap_content"/>
             <LinearLayout
