--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -13,6 +13,7 @@
         <import type="com.merlin.client.R"/>
         <import type="com.merlin.view.Clicker"/>
         <import type="com.merlin.model.BrowserModel" alias="Model"/>
+        <import type="android.text.Html"/>
     </data>
     <LinearLayout
             binding:createModel="@{true}"
@@ -59,6 +60,13 @@
                             android:orientation="horizontal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
+                            <TextView
+                                android:text="@{Html.fromHtml(`&lt;sup>`+vm.clientCount)}"
+                                android:textSize="7sp"
+                                android:visibility="@{vm.clientCount&lt;1?View.GONE:View.VISIBLE}"
+                                android:paddingBottom="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
                             <include
                                 android:id="@+id/fileBrowser_deviceNameTV"
                                 binding:device="@{vm.currentMeta}"
