--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,8 @@
     <dimen name="textTitle">18sp</dimen>
     <dimen name="textTitleSub">14sp</dimen>
     <dimen name="listItemNormal">55dp</dimen>
-    <dimen name="listIconNormal">38dp</dimen>
+    <dimen name="listItemSmall">45dp</dimen>
+    <dimen name="listIconNormal">40dp</dimen>
     <dimen name="titleIconSize">28dp</dimen>
     <dimen name="listItemSizeSmall">40dp</dimen>
     <dimen name="listItemSizeLessMedium">50dp</dimen>
