--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,8 @@
 
     <style name="checkboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/checkbox</item>
+        <item name="android:layout_width">@dimen/listIconNormal</item>
+        <item name="android:layout_height">@dimen/listIconNormal</item>
     </style>
     
     <style name="buttonStyle">
