--- a/app/src/main/res/layout/activity_transport.xml
+++ b/app/src/main/res/layout/activity_transport.xml
@@ -5,36 +5,17 @@
         <variable
             name="vm"
             type="com.merlin.model.TransportModel" />
-        <variable
-            name="onClickListener"
-            type="android.view.View.OnClickListener" />
     </data>
     <RelativeLayout
-        android:id="@+id/activity_transport_root"
+        binding:createModel="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:onClick="@{vm::onClick}"
         android:background="#aa000000"
         android:padding="10dp">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:text="🔼 12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_marginLeft="3dp"
-                android:text="🔽= 2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/activity_transporting_listRV"
             android:layout_centerInParent="true"
-            android:minHeight="200dp"
+            binding:adapter="@{vm.adapter}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
