--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include layout="@layout/item_context_menu"
+            binding:menu="@{ContextMenu.create(R.string.transportList,folder)}"/>
+        <include layout="@layout/item_context_menu"
             android:visibility="@{null!=folder?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.createFolder,folder)}"/>
         <include layout="@layout/item_context_menu"
