Add local file browser

--- a/app/src/main/res/layout/activity_transport.xml
+++ b/app/src/main/res/layout/activity_transport.xml
@@ -6,17 +6,15 @@
             name="vm"
             type="com.merlin.model.TransportModel" />
     </data>
-    <RelativeLayout
+    <LinearLayout
         binding:createModel="@{true}"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#aa000000"
-        android:padding="10dp">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/round_corner_black">
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_centerInParent="true"
             binding:adapter="@{vm.adapter}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
 </layout>
