--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,26 +62,26 @@
             <item name="android:layout_margin">3dp</item>
     </style>
 
-    <style name="activityTransportStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="activityTransportStyle">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
-<!--        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>-->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
 <!--        <item name="android:windowBackground">@android:color/transparent</item>-->
-<!--        <item name="android:windowFullscreen">true</item>-->
-<!--        <item name="android:windowFrame">@null</item>-->
-<!--        <item name="android:windowNoTitle">true</item>-->
-<!--        <item name="android:windowIsFloating">true</item>-->
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
 <!--        <item name="android:windowIsTranslucent">true</item>-->
-<!--        <item name="android:windowContentOverlay">@null</item>-->
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:backgroundDimEnabled">false</item>
 <!--        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>-->
-<!--        <item name="android:colorBackground">?attr/colorBackgroundFloating</item>-->
-<!--        <item name="android:colorBackgroundCacheHint">@null</item>-->
-<!--        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>-->
-<!--        <item name="windowActionBar">false</item>-->
-<!--        <item name="windowActionModeOverlay">true</item>-->
-<!--        <item name="android:buttonBarStyle">@style/Widget.AppCompat.ButtonBar.AlertDialog</item>-->
-<!--        <item name="android:borderlessButtonStyle">@style/Widget.AppCompat.Button.Borderless</item>-->
-<!--        <item name="android:windowCloseOnTouchOutside">true</item>-->
+        <item name="android:colorBackground">?attr/colorBackgroundFloating</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="android:buttonBarStyle">@style/Widget.AppCompat.ButtonBar.AlertDialog</item>
+        <item name="android:borderlessButtonStyle">@style/Widget.AppCompat.Button.Borderless</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 </resources>
