--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -11,6 +11,7 @@
         <import type="com.merlin.util.FileSize"/>
         <import type="com.merlin.transport.Upload"/>
         <import type="com.merlin.client.R"/>
+        <import type="com.merlin.util.Speed"/>
     </data>
     <LinearLayout
         android:orientation="horizontal"
@@ -40,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
             <TextView
-                android:text="@{data.speed}"
+                android:text="@{Speed.formatNetworkSpeed(data.speed)}"
                 android:layout_margin="1dp"
                 android:textSize="10sp"
                 style="@style/titleSubNormalTextView"/>
