--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -155,13 +155,7 @@
                 android:layout_height="wrap_content"/>
         </HorizontalScrollView>
         <View
-            android:background="#34ffffff"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            style="@style/horizontalDividerLine"/>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
