--- a/app/src/main/res/layout/activity_transport.xml
+++ b/app/src/main/res/layout/activity_transport.xml
@@ -20,9 +20,11 @@
             android:layout_marginBottom="5dp"
             android:text="@string/transportList"
             style="@style/titleNormalTextView"/>
+        <View style="@style/horizontalDividerLine"/>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_gravity="center_horizontal"
             binding:adapter="@{vm.adapter}"
+            android:layout_marginTop="3dp"
             android:minHeight="100dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
