--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -43,15 +43,15 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
             <TextView
-                android:text="@{data.status==Status.TRANSPORT_TARGET_EXIST?`存在`:data.status==Status.TRANSPORT_FAIL?`失败啦`:``}"
+                android:text="@{data.error}"
                 android:layout_margin="1dp"
-                android:visibility="@{data.status==Status.TRANSPORT_TARGET_EXIST||data.status==Status.TRANSPORT_FAIL?View.VISIBLE:View.GONE}"
+                android:visibility="@{data.error!=null?View.VISIBLE:View.GONE}"
                 android:textSize="10sp"
                 style="@style/titleSubNormalTextView"/>
             <TextView
                 android:text="@{data.speed>=0?Speed.formatNetworkSpeed(data.speed):``}"
                 android:layout_margin="1dp"
-                android:visibility="@{data.speed>=0?View.VISIBLE:View.GONE}"
+                android:visibility="@{data.speed>0?View.VISIBLE:View.GONE}"
                 android:textSize="10sp"
                 style="@style/titleSubNormalTextView"/>
             <TextView
