--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -17,7 +17,7 @@
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.open,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile?View.VISIBLE:View.GONE}"
+            android:visibility="@{file instanceof LocalFile&amp;&amp;!file.directory ?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.upload,file)}"/>
         <include layout="@layout/item_context_menu"
             android:visibility="@{file instanceof LocalFile?View.GONE:View.VISIBLE}"
